<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_homepage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/timerText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/homepage_spacing"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="90sp"
            android:text="30" />

        <Button
            android:id="@+id/record_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/homepage_button_margin"
            android:layout_marginTop="25dp"
            android:layout_marginRight="@dimen/homepage_button_margin"
            android:background="@color/colorPrimaryDark"
            android:text="@string/record_button" />

        <Button
            android:id="@+id/play_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/homepage_button_margin"
            android:layout_marginTop="25dp"
            android:layout_marginRight="@dimen/homepage_button_margin"
            android:background="@color/colorPrimaryDark"
            android:text="@string/play_button" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/homepage_button_margin"
            android:layout_marginTop="25dp"
            android:layout_marginRight="@dimen/homepage_button_margin"
            android:background="@color/colorPrimaryDark"
            android:text="@string/stop_button" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="125dp"
            android:layout_marginRight="50dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/submit_button" />


    </LinearLayout>


</RelativeLayout>