<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/emailtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="Email: " />

    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginRight="60dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:text="Password: " />

    <LinearLayout
        android:id="@+id/linear_layout_homepage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/homepage_spacing"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="100dp"
            android:layout_gravity="center_vertical|center_horizontal"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="100dp"
            android:layout_gravity="center_vertical|center_horizontal"
            />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="100dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/submit_button" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="100dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/register_button" />

    </LinearLayout>


</RelativeLayout>